04_k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-demo
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-demo
  template:
    metadata:
      labels:
        app: flask-demo
    spec:
      containers:
      - name: flask-demo
        image: flask-demo:0.1          
        imagePullPolicy: IfNotPresent  
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          periodSeconds: 30
