04_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  namespace: demo
spec:
  selector:
    app: flask-demo
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
